--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "trivia-murder-party-ts",
-    "private": true,
-    "version": "1.0.0",
-    "description": "trivia-murder-party-ts",
-    "type": "module",
-    "scripts": {
-        "dev": "concurrently \"vite --port 5173 --strictPort\" \"rcade dev http://localhost:5173\"",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@types/p5": "^1.7.6",
-        "concurrently": "^9.0.0",
-        "rcade": "^0.0.41",
-        "typescript": "^5.8.0",
-        "vite": "^7.2.4"
-    },
-    "dependencies": {
-        "@rcade/plugin-input-classic": "^0.2.1",
-        "p5": "^1.11.3"
-    }
+  "name": "trivia-murder-party-ts",
+  "private": true,
+  "version": "1.0.0",
+  "description": "trivia-murder-party-ts",
+  "type": "module",
+  "scripts": {
+    "dev": "concurrently \"vite --port 5173 --strictPort\" \"rcade dev http://localhost:5173\"",
+    "build": "vite build",
+    "check": "tsc --watch"
+  },
+  "devDependencies": {
+    "@types/p5": "^1.7.6",
+    "concurrently": "^9.0.0",
+    "rcade": "^0.0.41",
+    "typescript": "^5.8.0",
+    "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "@rcade/plugin-input-classic": "^0.2.1",
+    "p5": "^1.11.3"
+  }
 }
